[tool.poetry]
name = "beetroot-bot"
version = "0.1.0"
description = ""
authors = ["welaskez <nazar.nikitenko.03@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
pydantic-settings = "^2.5.2"
pytoniq = "^0.1.40"
apscheduler = "^3.10.4"
redis = "^5.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
